# rp2040-freertos-template

./: .gitmodules  CMakeLists.txt  README.md  flash.sh
src/: main.c
